data/derived/fa15/progs/unify/prog0080.ml.out
Characters 345-346:
  | SquareAv(a,b) -> (a*.a +. b*.b) / 2.0
                      ^
Error: This expression has type expr but an expression was expected of type
         float
